--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>情人节快乐</title>
+    <title>病娇问卷 - 情人节特别版</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="quiz-container">
-        <h1>情人节快乐</h1>
+        <h1>病娇问卷</h1>
         <div id="timer">20</div>
         <div id="question"></div>
         <div class="options">
