--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>病娇问卷 - 情人节特别版</title>
-    <link rel="stylesheet" href="style.css">
+    <title>沉岭的情人节问卷</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="quiz-container">
-        <h1>病娇问卷</h1>
-        <div id="timer">20</div>
-        <div id="question"></div>
-        <div class="options">
-            <button class="option" onclick="nextQuestion(0)"></button>
-            <button class="option" onclick="nextQuestion(1)"></button>
-            <button class="option" onclick="nextQuestion(2)"></button>
+    <div id="quiz-container" class="quiz-container">
+        <div id="question-container" class="question-container">
+            <h1 id="question"></h1>
+            <div id="options">
+                <button class="option" onclick="nextQuestion(0)">选项 1</button>
+                <button class="option" onclick="nextQuestion(1)">选项 2</button>
+                <button class="option" onclick="nextQuestion(2)">选项 3</button>
+            </div>
+        </div>
+        <div id="timer-container" class="timer-container">
+            <p id="timer">20</p>
         </div>
     </div>
-
-    <div id="result" class="hidden">
-        <h2 id="result-title"></h2>
+    
+    <div id="result-container" class="result-container" style="display:none;">
+        <h1 id="result-title"></h1>
         <p id="result-description"></p>
+        <button onclick="restartQuiz()">重试</button>
     </div>
 
     <script src="script.js"></script>
